--- a/pages/index.html
+++ b/pages/index.html
@@ -49,7 +49,7 @@
       <header id="header">
         <div class="inner">
           <h1 id="logo">
-            <a href="#" class="logo__link">
+            <a href="./index.html" class="logo__link">
               <span class="blind">키아프서울</span>
             </a>
           </h1>
@@ -66,7 +66,6 @@
               </svg>
             </button>
             <button class="all-menu">
-              <span class="blind">전체메뉴</span>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
@@ -77,51 +76,30 @@
                 stroke-linecap="round"
                 stroke-linejoin="round"
               >
-                <line x1="2" y1="3" x2="22" y2="3"></line>
-                <line x1="2" y1="12" x2="16" y2="12"></line>
-                <line x1="2" y1="21" x2="22" y2="21"></line>
+                <line class="line1" x1="2" y1="3" x2="22" y2="3"></line>
+                <line class="line2" x1="2" y1="12" x2="16" y2="12"></line>
+                <line class="line3" x1="2" y1="21" x2="22" y2="21"></line>
               </svg>
             </button>
           </div>
         </div>
-        <!-- active 추가시 활성화 -->
-        <nav id="nav-all" class="">
-          <h2 class="nav-all__tit">Menu</h2>
-          <ul class="gnb">
-            <li><a href="#">About</a></li>
-            <li><a href="#">Insights</a></li>
+      </header>
+      <!-- active 추가시 활성화 -->
+      <nav id="nav-all" class="">
+        <div class="inner">
+          <ul class="gnb gnb_left">
+            <li><a href="./about.html">About</a></li>
+            <li><a href="#">Insight</a></li>
             <li><a href="#">Archive</a></li>
-            <li><a href="#">Partnes</a></li>
+          </ul>
+          <ul class="gnb gnb_right">
             <li><a href="#">News</a></li>
+            <li><a href="#">Partner</a></li>
+            <li><a href="#">Membership</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
-          <button class="btn-close">
-            <span class="blind">메뉴닫기</span>
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-              <line
-                x1="2"
-                y1="2"
-                x2="22"
-                y2="22"
-                stroke="black"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <line
-                x1="22"
-                y1="2"
-                x2="2"
-                y2="22"
-                stroke="black"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-            </svg>
-          </button>
-        </nav>
-      </header>
+        </div>
+      </nav>
       <div class="intro">
         <div class="inner">
           <div class="intro__txt">
@@ -326,7 +304,7 @@
           </div>
         </div>
 
-        <div class="sec-g sec-slide">
+        <div class="sec-g sec-slide bg-gray">
           <div class="inner">
             <div class="inner-slide">
               <div class="sec-slide__tit">
@@ -340,7 +318,7 @@
                     <div class="swiper-slide cont-item">
                       <a href="#">
                         <div class="image-box">
-                          <img src="../resources/images/pattern/common/sec-slide_01.jpg" alt="" />
+                          <img src="../resources/images/pattern/common/sec-slide_01.jpg" alt="빛, 있음" />
                         </div>
                         <div class="txt-box">
                           <span class="date">2024. 10. 4 - 10. 26</span>
@@ -357,7 +335,7 @@
                     <div class="swiper-slide cont-item">
                       <a href="#">
                         <div class="image-box">
-                          <img src="../resources/images/pattern/common/sec-slide_02.jpg" alt="" />
+                          <img src="../resources/images/pattern/common/sec-slide_02.jpg" alt="Horizontal Cocktail" />
                         </div>
                         <div class="txt-box">
                           <span class="date">2024. 10. 4 - 10. 26</span>
@@ -374,7 +352,7 @@
                     <div class="swiper-slide cont-item">
                       <a href="#">
                         <div class="image-box">
-                          <img src="../resources/images/pattern/common/sec-slide_03.jpg" alt="" />
+                          <img src="../resources/images/pattern/common/sec-slide_03.jpg" alt="첫 눈에 반한 순간" />
                         </div>
                         <div class="txt-box">
                           <span class="date">2024. 10. 4 - 10. 26</span>
@@ -389,9 +367,9 @@
                     </div>
                     <!-- 슬라이드 4 -->
                     <div class="swiper-slide cont-item">
-                      <a href="#">
+                      <a href="./story.html">
                         <div class="image-box">
-                          <img src="../resources/images/pattern/common/sec-slide_04.jpg" alt="" />
+                          <img src="../resources/images/pattern/common/sec-slide_04.jpg" alt="최대한 느리게" />
                         </div>
                         <div class="txt-box">
                           <span class="date">2024. 9. 14 - 11. 23</span>
@@ -408,7 +386,7 @@
                     <div class="swiper-slide cont-item">
                       <a href="#">
                         <div class="image-box">
-                          <img src="../resources/images/pattern/common/sec-slide_05.jpg" alt="" />
+                          <img src="../resources/images/pattern/common/sec-slide_05.jpg" alt="빛, 있음" />
                         </div>
                         <div class="txt-box">
                           <span class="date">2024. 10. 4 - 10. 26</span>
@@ -424,7 +402,7 @@
                     <div class="swiper-slide cont-item">
                       <a href="#">
                         <div class="image-box">
-                          <img src="../resources/images/pattern/common/sec-slide_06.jpg" alt="" />
+                          <img src="../resources/images/pattern/common/sec-slide_06.jpg" alt="빛, 있음" />
                         </div>
                         <div class="txt-box">
                           <span class="date">2024. 10. 4 - 10. 26</span>
@@ -440,7 +418,7 @@
                     <div class="swiper-slide cont-item">
                       <a href="#">
                         <div class="image-box">
-                          <img src="../resources/images/pattern/common/sec-slide_07.jpg" alt="" />
+                          <img src="../resources/images/pattern/common/sec-slide_07.jpg" alt="빛, 있음" />
                         </div>
                         <div class="txt-box">
                           <span class="date">2024. 10. 4 - 10. 26</span>
